# Tourismus.Model/Models/Country.cs
@@ -1,8 +1,13 @@
-﻿namespace Tourismus.Model.Models {
+﻿using System.Collections.Generic;
+
+namespace Tourismus.Model.Models {
     public class Country {
+        public Country() {
+            Cities = new HashSet<City>();
+        }
         public int Id { get; set; }
         public string Name { get; set; }
 
-        public virtual City City { get; set; }
+        public virtual ICollection<City> Cities { get; set; }
     }
 }
