# Tourismus.WebApp/Controllers/Meals/AddNewMealParameters.cs
@@ -1,0 +1,5 @@
+﻿namespace Tourismus.WebApp.Controllers.Offers {
+    public class AddNewMealParameters {
+        public string Name { get; set; }
+    }
+}
