# Tourismus.WebApp/ReadModels/Dtos/ControllerBase/City_Dto.cs
@@ -1,9 +1,8 @@
-﻿using Tourismus.Model.Models;
-
-namespace Tourismus.WebApp.ReadModels.Dtos.List {
+﻿namespace Tourismus.WebApp.ReadModels.Dtos.List {
     public class City_Dto {
         public int Id { get; set; }
         public string Name { get; set; }
         public string CountryName { get; set; }
+        public bool IsAirport { get; set; }
     }
 }
